# polynomial-roots-calculator

./: Cargo.toml  rust-toolchain.toml
src/: float.rs  main.rs  polynomial.rs  roots.rs
