[package]
name = "polynomial-roots-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
num-rational = {version = "0.4.1", default-features = false}
num-traits = {version = "0.2.15", default-features = false}

[dev-dependencies]
rand = "0.8.5"
